chore: split the results in different containers

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
             </select>
             <button type="submit">Buscar</button>
         </form>
-        <div id="resultado"></div>
+        <section id="resultados">
+            <div id="combinaciones"></div>
+            <div id="distribuciones"></div>
+            <div id="valores"></div>
+        </section>
     </body>
     <script src="./app.js"></script>
 </html>
